k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rul-api
  labels:
    app: rul-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rul-api
  template:
    metadata:
      labels:
        app: rul-api
    spec:
      containers:
        - name: rul-api
          image: predictive-maintenance-rul-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /app/data
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: data
          hostPath:
            path: /data
            type: Directory
